Add print body method
